<resources>
    <string name="app_name">My Recipes</string>
    <string name="my_recipes">Moje przepisy</string>
    <string name="favourite">Ulubione</string>
    <string name="breakfast">Śniadania</string>
    <string name="soup">Zupy</string>
    <string name="main_dish">Dania główne</string>
    <string name="salad">Sałatki</string>
    <string name="snack">Przekąski</string>
    <string name="dessert">Desery</string>
    <string name="drink">Drinki</string>
    <string name="add_recipe">Dodaj przepis</string>
    <string name="name">Nazwa</string>
    <string name="quantity">Ilość</string>
    <string name="category">Kategoria</string>
    <string name="category_brackets">(kategoria)</string>
    <string name="choose_category">Wybierz kategorię</string>
    <string name="yes">Tak</string>
    <string name="ok">OK</string>
    <string name="next">Dalej</string>
    <string name="add">Dodaj</string>
    <string name="save">Zapisz</string>
    <string name="cancel">Anuluj</string>
    <string name="fill_data">Uzupełnij dane</string>
    <string name="ingredients">Składniki</string>
    <string name="preparation_description">Przygotowanie</string>
    <string name="add_first_ingredient">Dodaj pierwszy składnik.</string>
    <string name="add_ingredient">Dodaj składnik</string>
    <string name="edit_ingredient">Edytuj składnik</string>
    <string name="add_preparation_description">Opisz sposób wykonania...</string>
    <string name="recipe_added">Dodano nowy przepis</string>
    <string name="recipe_updated">Zaktualizowano przepis</string>
    <string name="recipe_deleted">Przepis został usunięty</string>
    <string name="filter_recipe_by_name">Szukaj po nazwie...</string>
    <string name="no_recipes_info">Nie masz jeszcze żadnego zapisanego przepisu w tej kategorii.</string>
    <string name="recipe_added_to_favorites">Przepis został dodany do ulubionych.</string>
    <string name="recipe_removed_from_favorites">Przepis został usunięty z ulubionych.</string>
    <string name="ingredient_removal_confirmation">Czy na pewno chcesz usunąć ten składnik?</string>
    <string name="recipe_removal_confirmation">Czy na pewno chcesz usunąć ten przepis?</string>
</resources>